--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "nedb-async-store": "^0.1.1",
     "nodemailer": "^6.4.15"
   },
   "type": "module"
