added signup/signin functionality without email verification

--- a/server/package.json
+++ b/server/package.json
@@ -14,8 +14,10 @@
   "author": "Pietro Anello",
   "license": "MIT",
   "dependencies": {
+    "bcrypt": "^5.0.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "nedb-async-store": "^0.1.1",
     "nodemailer": "^6.4.15"
   },
