--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "bcrypt": "^5.0.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "googleapis": "^64.0.0",
     "jsonwebtoken": "^8.5.1",
     "nedb-async-store": "^0.1.1",
     "nodemailer": "^6.4.15"
