--- a/server/.env_example
+++ b/server/.env_example
@@ -1,2 +1,6 @@
 PORT=[YOUR_PORT]
 JWT_KEY=[YOUR_RANDOM_KEY]
+CLIENT_ID=[CLIENT_ID]
+CLIENT_SECRET=[CLIENT_SECRET]
+REDIRECT_URI=[REDIRECT_URI]
+REFRESH_TOKEN=[REFRESH_TOKEN]
