--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "notistack": "^1.0.1",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
+    "react-lottie": "^1.2.3",
     "react-scripts": "4.0.0",
     "typescript": "^4.0.5",
     "web-vitals": "^0.2.4"
