--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "start": "npm run build && (cd server && node server.js)"
+    "start": "npm run build && (cd server && node server.js)",
+    "postinstall": "cd react-app && npm install"
   },
   "eslintConfig": {
     "extends": [
